@@ -20,12 +20,13 @@ TAO_NS_Properties::~TAO_NS_Properties ()
 {
 }
 
+#define ACE_HAS_EXPLICIT_TEMPLATE_INSTANTIATION
 #if defined (ACE_HAS_EXPLICIT_TEMPLATE_INSTANTIATION)
 
-template class ACE_Singleton<TAO_NS_Properties, TAO_SYNCH_MUTEX>;
+template class TAO_Singleton<TAO_NS_Properties, TAO_SYNCH_MUTEX>;
 
 #elif defined (ACE_HAS_TEMPLATE_INSTANTIATION_PRAGMA)
 
-#pragma instantiate ACE_Singleton<TAO_NS_Properties, TAO_SYNCH_MUTEX>
+#pragma instantiate TAO_Singleton<TAO_NS_Properties, TAO_SYNCH_MUTEX>
 
 #endif /*ACE_HAS_EXPLICIT_TEMPLATE_INSTANTIATION */
